# northwind_traders

./: README.md  main.py  pyproject.toml
northwind_traders/: code.py  functions.py
northwind_traders/data/: northwind_dump
northwind_traders/sql_requests/: customers_page.sql  employees_page.sql  orders_page.sql  product_page.sql
