[tool.poetry]
name = "northwind-traders"
version = "0.1.0"
description = ""
authors = ["dichenk"]
readme = "README.md"
packages = [{include = "northwind_traders"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
